k8s/sevice.yaml
apiVersion: v1
kind: Service
metadata:
  name: static
  namespace: static
spec:
  selector:
    app: static
  type: ClusterIP
  ports: 
    port: 80
    targetPort: 80
